--- a/ChattoAdditions/Source/Input/ChatInputBar.xib
+++ b/ChattoAdditions/Source/Input/ChatInputBar.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,10 +22,9 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hkz-tq-X6j" userLabel="Tab selector container">
                     <rect key="frame" x="0.0" y="79" width="600" height="44"/>
                     <subviews>
-                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNX-pj-5AB" customClass="HorizontalStackScrollView" customModule="ChattoAdditions">
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="2dA-Rn-q4u">
                             <rect key="frame" x="0.0" y="0.0" width="506" height="44"/>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </scrollView>
+                        </stackView>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hE9-hU-Ci1">
                             <rect key="frame" x="506" y="0.0" width="94" height="44"/>
                             <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
@@ -38,18 +37,18 @@
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="hE9-hU-Ci1" secondAttribute="trailing" id="ABn-ah-JYL"/>
-                        <constraint firstItem="WNX-pj-5AB" firstAttribute="leading" secondItem="hkz-tq-X6j" secondAttribute="leading" id="Jk5-7M-Mh8"/>
+                        <constraint firstAttribute="trailing" secondItem="2dA-Rn-q4u" secondAttribute="trailing" id="FjJ-Re-5Ed"/>
                         <constraint firstItem="hE9-hU-Ci1" firstAttribute="top" secondItem="hkz-tq-X6j" secondAttribute="top" id="KsA-Bb-G4V"/>
-                        <constraint firstItem="hE9-hU-Ci1" firstAttribute="leading" secondItem="WNX-pj-5AB" secondAttribute="trailing" id="M1Q-jh-zRz"/>
-                        <constraint firstItem="WNX-pj-5AB" firstAttribute="top" secondItem="hkz-tq-X6j" secondAttribute="top" id="QdZ-iC-yJd"/>
-                        <constraint firstAttribute="trailing" secondItem="WNX-pj-5AB" secondAttribute="trailing" id="ciR-Nt-1tI"/>
-                        <constraint firstAttribute="bottom" secondItem="WNX-pj-5AB" secondAttribute="bottom" id="i7l-t6-4IG"/>
+                        <constraint firstItem="2dA-Rn-q4u" firstAttribute="leading" secondItem="hkz-tq-X6j" secondAttribute="leading" id="ZE7-ME-9pB"/>
+                        <constraint firstItem="hE9-hU-Ci1" firstAttribute="leading" secondItem="2dA-Rn-q4u" secondAttribute="trailing" id="isa-dX-zwY"/>
+                        <constraint firstItem="2dA-Rn-q4u" firstAttribute="top" secondItem="hkz-tq-X6j" secondAttribute="top" id="lUK-4h-keq"/>
+                        <constraint firstAttribute="bottom" secondItem="2dA-Rn-q4u" secondAttribute="bottom" id="tal-Z5-yfz"/>
                         <constraint firstAttribute="height" constant="44" id="vwa-F7-EIB"/>
                         <constraint firstAttribute="bottom" secondItem="hE9-hU-Ci1" secondAttribute="bottom" id="x7H-Lm-ad7"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
-                            <exclude reference="ciR-Nt-1tI"/>
+                            <exclude reference="FjJ-Re-5Ed"/>
                         </mask>
                     </variation>
                 </view>
@@ -84,17 +83,17 @@
                 </mask>
             </variation>
             <connections>
-                <outlet property="scrollView" destination="WNX-pj-5AB" id="Qqy-Ny-mng"/>
+                <outlet property="scrollView" destination="2dA-Rn-q4u" id="SLK-d9-Cur"/>
                 <outlet property="sendButton" destination="hE9-hU-Ci1" id="VFQ-Pb-J37"/>
                 <outlet property="tabBarContainerHeightConstraint" destination="vwa-F7-EIB" id="d3G-fs-hEH"/>
                 <outlet property="textView" destination="fsh-hH-hKG" id="QMH-G9-ADs"/>
                 <outlet property="topBorderHeightConstraint" destination="IIv-qg-Tlp" id="qiB-dH-AHS"/>
                 <outletCollection property="constraintsForVisibleTextView" destination="4Vl-vV-gaa" collectionClass="NSMutableArray" id="rBg-0B-c4B"/>
                 <outletCollection property="constraintsForHiddenTextView" destination="gpt-vU-KzZ" collectionClass="NSMutableArray" id="EzL-hX-Wle"/>
-                <outletCollection property="constraintsForHiddenSendButton" destination="ciR-Nt-1tI" collectionClass="NSMutableArray" id="KTM-lg-5xh"/>
                 <outletCollection property="constraintsForVisibleSendButton" destination="ABn-ah-JYL" collectionClass="NSMutableArray" id="oqj-uC-3TX"/>
+                <outletCollection property="constraintsForHiddenSendButton" destination="FjJ-Re-5Ed" collectionClass="NSMutableArray" id="QeW-it-w4y"/>
             </connections>
-            <point key="canvasLocation" x="-341" y="68.5"/>
+            <point key="canvasLocation" x="-342.02898550724638" y="67.96875"/>
         </view>
     </objects>
 </document>
